Changed coming soon info

--- a/index.html
+++ b/index.html
@@ -51,8 +51,9 @@
 		
 		<p class="pitch comming-soon">
 			COMING SOON<br>
-			Chrome Cast streaming<br>
-			Bookmarks<br>
+			AirPlay and Chrome Cast streaming<br>
+			Syncing with iCloud<br>
+			TouchBar support
 		</p>
 	</section>
 	
