--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
 			<a class="button" href="https://github.com/insidegui/WWDC" title="This is an open source project, you can find the code and contribute on GitHub">
 				Fork on GitHub
 			</a>
-			<a class="button primary-bg" href="https://github.com/insidegui/WWDC/releases/latest">
-				Download
+			<a class="button primary-bg" href="https://github.com/insidegui/WWDC/raw/master/Releases/WWDC_latest.zip">
+				Download Beta
 			</a>
 		</div>
 		
