Added related links

--- a/index.html
+++ b/index.html
@@ -57,6 +57,25 @@
 		</p>
 	</section>
 	
+	<section id="others">
+		<h3>Other cool WWDC and Apple developer related projects</h3>
+		
+		<div>
+			<h4><a href="https://appsto.re/br/w0kkM.i" rel="external">WWDC app for iOS</a></h4>
+			<p>Apple's official WWDC app for iOS where you can see the schedule, maps, videos and news.</p>
+		</div>
+		
+		<div>
+			<h4><a href="https://appsto.re/br/InPC0.i" rel="external">Parties for WWDC</a></h4>
+			<p>An aggregator of developer parties happening in San Jose mostly exclusively for attendees of WWDC.</p>
+		</div>
+		
+		<div>
+			<h4><a href="https://appsto.re/br/4Bnlib.i" rel="external">Swift Evolution for iOS</a></h4>
+			<p>Follow Swift evolution proposals on your iOS device.</p>
+		</div>
+	</section>
+	
 	<footer>
 		<p>WWDC for macOS is a native app (Electron Free™).</p>
 		
