--- a/index.html
+++ b/index.html
@@ -69,6 +69,16 @@
 			<h4><a href="https://appsto.re/br/InPC0.i" rel="external">Parties for WWDC</a></h4>
 			<p>An aggregator of developer parties happening in San Jose mostly exclusively for attendees of WWDC.</p>
 		</div>
+
+		<div>
+			<h4><a href="https://wwdcscholars.com" rel="external">WWDC Scholars</a></h4>
+			<p>A collection of WWDC Scholarship winners. An <a href="https://itunes.apple.com/gb/app/scholars-of-wwdc/id999731893?mt=8" rel="external">iOS app</a> is also available.</p>
+		</div>
+
+		<div>
+			<h4><a href="http://asciiwwdc.com" rel="external">ASCIIwwdc</a></h4>
+			<p>Searchable full-text transcripts of WWDC sessions.</p>
+		</div>
 		
 		<div>
 			<h4><a href="https://appsto.re/br/4Bnlib.i" rel="external">Swift Evolution for iOS</a></h4>
