--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 			<a class="button" href="https://github.com/insidegui/WWDC" title="This is an open source project, you can find the code and contribute on GitHub">
 				Fork on GitHub
 			</a>
-			<a class="button primary-bg" href="https://github.com/insidegui/WWDC/raw/master/Releases/WWDC_latest.zip">
+			<a class="button primary-bg" href="https://github.com/insidegui/WWDC/releases/download/5.0.2/WWDC_v5.0.2.zip">
 				Download Beta
 			</a>
 		</div>
