--- a/index.html
+++ b/index.html
@@ -93,6 +93,8 @@
 			<small>macOS is a trademark of Apple Inc., registered in the U.S. and other countries.</small>
 			<small>This app is not made by, affiliated with or endorsed by Apple.</small>
 		</p>
+		
+		<p><small><a href="/WWDC_macOS_pk_v5-2.zip" rel="external nofollow">Press</a></small></p>
 	</footer>
 	
 	<script src="/js/retina.min.js"></script>
