Added system requirements

--- a/index.html
+++ b/index.html
@@ -55,6 +55,11 @@
 			Syncing with iCloud<br>
 			TouchBar support
 		</p>
+		
+		<p class="pitch comming-soon">
+			SYSTEM REQUIREMENTS<br>
+			macOS 10.12 (Sierra) or later
+		</p>
 	</section>
 	
 	<section id="others">
