Removed beta flag

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 				Fork on GitHub
 			</a>
 			<a class="button primary-bg" href="https://github.com/insidegui/WWDC/releases/download/5.0.4/WWDC_v5.0.4.zip">
-				Download Beta
+				Download
 			</a>
 		</div>
 		
