--- a/index.html
+++ b/index.html
@@ -46,12 +46,13 @@
 		<p class="pitch">
 			Watch this year’s sessions <strong>live</strong>,<br>
 			<strong>download</strong> videos for later,<br>
+			watch videos on your <strong>ChromeCast</strong>,<br>
 			<strong>search and filter</strong> by event, track and platform.
 		</p>
 		
 		<p class="pitch comming-soon">
 			COMING SOON<br>
-			AirPlay and Chrome Cast streaming<br>
+			AirPlay streaming<br>
 			Syncing with iCloud<br>
 			TouchBar support
 		</p>
