Font weighting changes

--- a/index.html
+++ b/index.html
@@ -44,22 +44,22 @@
 		</div>
 		
 		<p class="pitch">
-			Watch this year’s sessions <strong>live</strong>,<br>
+			<span class="light">Watch this year’s sessions <strong>live</strong>,<br>
 			<strong>download</strong> videos for later,<br>
 			watch videos on your <strong>ChromeCast</strong>,<br>
-			<strong>search and filter</strong> by event, track and platform.
+			<strong>search and filter</strong> by event, track and platform.</span>
 		</p>
 		
 		<p class="pitch comming-soon">
 			COMING SOON<br>
-			AirPlay streaming<br>
+			<span class="light">AirPlay streaming<br>
 			Syncing with iCloud<br>
-			TouchBar support
+			TouchBar support</span>
 		</p>
 		
 		<p class="pitch comming-soon">
 			SYSTEM REQUIREMENTS<br>
-			macOS 10.12 (Sierra) or later
+			<span class="light">macOS 10.12 (Sierra) or later<span>
 		</p>
 	</section>
 	
