Initial changes for June 2018/V6

--- a/index.html
+++ b/index.html
@@ -46,25 +46,35 @@
 		<p class="pitch">
 			<span class="light">Watch this year’s sessions <strong>live</strong>,<br>
 			<strong>download</strong> videos for later,<br>
-			watch videos on your <strong>ChromeCast</strong>,<br>
+			watch on your <strong>ChromeCast</strong> or in <strong>Picture-in-Picture</strong> mode,<br>
 			<strong>search and filter</strong> by event, track and platform.</span>
 		</p>
-		
+
 		<p class="pitch comming-soon">
-			COMING SOON<br>
-			<span class="light">AirPlay streaming<br>
-			Syncing with iCloud<br>
-			TouchBar support</span>
+			New for Version 6<br>
+			<span class="light">
+			iCloud Sync (Beta)<br/>
+			Touchbar Support<br/>
+			Calendar Integration<br/>
+			Related Sessions<br/>
+			Playlists<br/>
+			News<br/>
+			</span>
 		</p>
 		
 		<p class="pitch comming-soon">
-			SYSTEM REQUIREMENTS<br>
+			Coming Soon<br>
+			<span class="light">AirPlay streaming<br></span>
+		</p>
+		
+		<p class="pitch comming-soon">
+			System Requirements<br>
 			<span class="light">macOS 10.12 (Sierra) or later<span>
 		</p>
 	</section>
 	
 	<section id="others">
-		<h3>Other cool WWDC and Apple developer related projects</h3>
+		<h3>Some of our other favourite WWDC and Apple developer related projects</h3>
 		
 		<div>
 			<h4><a href="https://appsto.re/br/w0kkM.i" rel="external">WWDC app for iOS</a></h4>
