Update index for V6

--- a/index.html
+++ b/index.html
@@ -53,23 +53,25 @@
 		<p class="pitch comming-soon">
 			New for Version 6<br>
 			<span class="light">
-			iCloud Sync (Beta)<br/>
-			Touchbar Support<br/>
-			Calendar Integration<br/>
-			Related Sessions<br/>
-			Playlists<br/>
-			News<br/>
+			iCloud Sync (Beta)<br>
+			Touch Bar Support<br>
+			Calendar Integration<br>
+			Related Sessions<br>
+			Playlists<br>
 			</span>
 		</p>
 		
 		<p class="pitch comming-soon">
 			Coming Soon<br>
-			<span class="light">AirPlay streaming<br></span>
+			<span class="light">
+			Curated Playlists<br>
+			Shared Bookmarks<br>
+			AirPlay Streaming<br></span>
 		</p>
 		
 		<p class="pitch comming-soon">
 			System Requirements<br>
-			<span class="light">macOS 10.12 (Sierra) or later<span>
+			<span class="light">macOS 10.12.2 (Sierra) or later<span>
 		</p>
 	</section>
 	
