Update index to point to press pack

--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
 			<small>This app is not made by, affiliated with or endorsed by Apple.</small>
 		</p>
 		
-		<p><small><a href="/WWDC_macOS_pk_v5-2.zip" rel="external nofollow">Press</a></small></p>
+		<p><small><a href="/WWDC_macOS_press_pack_v6.zip" rel="external nofollow">Press</a></small></p>
 	</footer>
 	
 	<script src="/js/retina.min.js"></script>
