--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	<link rel="stylesheet" href="css/main.css">
 	
 	<meta property="og:title" content="The unofficial WWDC app for macOS">
-	<meta property="og:image" content="https://wwdc.io/images/hero@2x.png">
+	<meta property="og:image" content="https://wwdc.io/images/hero_v6@2x.png">
 	<meta property="og:site_name" content="WWDC for macOS"/>
 	<meta property="og:description" content="Watch all WWDC videos from this year and previous years."/>
 	
@@ -28,7 +28,7 @@
 	</header>
 	
 	<section id="hero">
-		<img src="images/hero.png" src>
+		<img src="images/hero_v6.png" src>
 	</section>
 	
 	<section id="description">
