Fixes third party brand typo

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 		<p class="pitch">
 			<span class="light">Watch this year’s sessions <strong>live</strong>,<br>
 			<strong>download</strong> videos for later,<br>
-			watch on your <strong>ChromeCast</strong> or in <strong>Picture-in-Picture</strong> mode,<br>
+			watch on your <strong>Chromecast</strong> or in <strong>Picture-in-Picture</strong> mode,<br>
 			<strong>search and filter</strong> by event, track and platform.</span>
 		</p>
 
