Adds ConfFriends to list of other WWDC/dev projects

--- a/index.html
+++ b/index.html
@@ -78,12 +78,17 @@
 		<h3>Some of our other favourite WWDC and Apple developer related projects</h3>
 		
 		<div>
-			<h4><a href="https://appsto.re/br/w0kkM.i" rel="external">WWDC app for iOS</a></h4>
+			<h4><a href="https://appsto.re/us/w0kkM.i" rel="external">WWDC app for iOS</a></h4>
 			<p>Apple's official WWDC app for iOS where you can see the schedule, maps, videos and news.</p>
 		</div>
 		
 		<div>
-			<h4><a href="https://appsto.re/br/InPC0.i" rel="external">Parties for WWDC</a></h4>
+			<h4><a href="https://itunes.apple.com/us/app/conffriends/id1386399019" rel="external">ConfFriends</a></h4>
+			<p>An easy way to see who's around San Jose and connect with other developers during WWDC.</p>
+		</div>
+		
+		<div>
+			<h4><a href="https://appsto.re/us/InPC0.i" rel="external">Parties for WWDC</a></h4>
 			<p>An aggregator of developer parties happening in San Jose mostly exclusively for attendees of WWDC.</p>
 		</div>
 
@@ -98,7 +103,7 @@
 		</div>
 		
 		<div>
-			<h4><a href="https://appsto.re/br/4Bnlib.i" rel="external">Swift Evolution for iOS</a></h4>
+			<h4><a href="https://appsto.re/us/4Bnlib.i" rel="external">Swift Evolution for iOS</a></h4>
 			<p>Follow Swift evolution proposals on your iOS device.</p>
 		</div>
 	</section>
