--- a/index.html
+++ b/index.html
@@ -15,6 +15,19 @@
 	<meta property="og:site_name" content="WWDC for macOS"/>
 	<meta property="og:description" content="Watch all WWDC videos from this year and previous years."/>
 	
+	<script>
+		function reqListener () {
+		  window.location.href = this.response.assets[0].browser_download_url
+		}
+
+		function onClickDownload() {
+			var releaseReq = new XMLHttpRequest();
+			releaseReq.addEventListener("load", reqListener);
+			releaseReq.responseType = "json"
+			releaseReq.open("GET", "https://api.github.com/repos/insidegui/wwdc/releases/latest");
+		releaseReq.send();
+		}
+	</script>
 </head>
 <body>
 	
@@ -38,7 +51,7 @@
 			<a class="button" href="https://github.com/insidegui/WWDC" title="This is an open source project, you can find the code and contribute on GitHub">
 				Fork on GitHub
 			</a>
-			<a class="button primary-bg" href="https://github.com/insidegui/WWDC/releases/download/6.0/WWDC_v6.0.zip">
+			<a class="button primary-bg" onclick="onClickDownload()">
 				Download
 			</a>
 		</div>
