--- a/index.html
+++ b/index.html
@@ -50,17 +50,15 @@
 		</p>
 
 		<p class="pitch comming-soon">
-			New for Version 6<br>
+			New for Version 6.5<br>
 			<span class="light">
-			iCloud Sync (Beta)<br>
-			Touch Bar Support<br>
-			Calendar Integration<br>
-			Related Sessions<br>
+			Transcripts are now provided by Apple<br>
+			Enjoy the community tab with curated content from CocoaHub<br>
 			</span>
 		</p>
 		
 		<p class="pitch comming-soon">
-			Coming Soon<br>
+			Other features<br>
 			<span class="light">
 			Curated Playlists<br>
 			Shared Bookmarks<br>
@@ -69,7 +67,7 @@
 		
 		<p class="pitch comming-soon">
 			System Requirements<br>
-			<span class="light">macOS 10.12.2 (Sierra) or later<span>
+			<span class="light">macOS 10.15 (Catalina) or later<span>
 		</p>
 	</section>
 	
@@ -77,10 +75,11 @@
 		<h3>Some of our other favourite WWDC and Apple developer related projects</h3>
 		
 		<div>
-			<h4><a href="https://appsto.re/us/w0kkM.i" rel="external">WWDC app for iOS</a></h4>
-			<p>Apple's official WWDC app for iOS where you can see the schedule, maps, videos and news.</p>
+			<h4><a href="https://appsto.re/us/w0kkM.i" rel="external">Apple Developer app for iOS</a></h4>
+			<p>Apple's official Developer app for iOS where you can see the schedule, maps, videos, news, and more.</p>
 		</div>
 		
+		<!--
 		<div>
 			<h4><a href="https://itunes.apple.com/us/app/conffriends/id1386399019" rel="external">ConfFriends</a></h4>
 			<p>An easy way to see who's around San Jose and connect with other developers during WWDC.</p>
@@ -89,6 +88,12 @@
 		<div>
 			<h4><a href="https://appsto.re/us/InPC0.i" rel="external">Parties for WWDC</a></h4>
 			<p>An aggregator of developer parties happening in San Jose mostly exclusively for attendees of WWDC.</p>
+		</div>
+		-->
+
+		<div>
+			<h4><a href="https://cocoahub.app" rel="external">CocoaHub</a></h4>
+			<p>An excellent source of articles, newsletters, podcasts, and more, all about development for Apple's platforms.</p>
 		</div>
 
 		<div>
@@ -119,17 +124,6 @@
 	</footer>
 	
 	<script src="/js/retina.min.js"></script>
-	
-	<script>
-	  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-	  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-	  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-	  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-
-	  ga('create', 'UA-1951400-16', 'auto');
-	  ga('send', 'pageview');
-
-	</script>
 	
 </body>
 </html>
