--- a/index.html
+++ b/index.html
@@ -16,11 +16,7 @@
 	<meta property="og:description" content="Watch all WWDC videos from this year and previous years."/>
 </head>
 <body>
-	
-	<header id="steve">
-		<p>One more thing...</p>
-	</header>
-	
+
 	<header id="identity">
 		<h1 id="icon">WWDC</h1>
 		<h1>WWDC for macOS</h1>
@@ -50,19 +46,18 @@
 		</p>
 
 		<p class="pitch comming-soon">
-			New for Version 6.5<br>
-			<span class="light">
+			<h4>New for Version 6.5</h4>
+			<span class="light subpitch">
 			Transcripts are now provided by Apple<br>
 			Enjoy the community tab with curated content from CocoaHub<br>
 			</span>
 		</p>
 		
 		<p class="pitch comming-soon">
-			Other features<br>
-			<span class="light">
-			Curated Playlists<br>
-			Shared Bookmarks<br>
-			AirPlay Streaming<br></span>
+			<h4>Other Features</h4>
+			<span class="light subpitch">
+			Add Bookmarks to Videos<br>
+			Share Clips<br>
 		</p>
 		
 		<p class="pitch comming-soon">
