--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
 		<p class="pitch comming-soon">
 			<h4>Other Features</h4>
 			<span class="light subpitch">
+			Universal Links and Handoff<br>
 			Add Bookmarks to Videos<br>
 			Share Clips<br>
 		</p>
