Updated assets for v7

--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
 	
 	<title>The unofficial WWDC app for macOS</title>
 	
-	<link rel="stylesheet" href="css/main.css">
+	<link rel="stylesheet" href="css/main_v7.css">
 	
 	<meta property="og:title" content="The unofficial WWDC app for macOS">
-	<meta property="og:image" content="https://wwdc.io/images/hero_v6@2x.png">
+	<meta property="og:image" content="https://wwdc.io/images/hero_v7@2x.png">
 	<meta property="og:site_name" content="WWDC for macOS"/>
 	<meta property="og:description" content="Watch all WWDC videos from this year and previous years."/>
 </head>
@@ -23,7 +23,7 @@
 	</header>
 	
 	<section id="hero">
-		<img src="images/hero_v6.png" src>
+		<img src="images/hero_v7.png" src>
 	</section>
 	
 	<section id="description">
@@ -46,21 +46,15 @@
 		</p>
 
 		<p class="pitch comming-soon">
-			<h4>New for Version 6.5</h4>
+			<h4>New for Version 7</h4>
 			<span class="light subpitch">
 			Transcripts are now provided by Apple<br>
-			Enjoy the community tab with curated content from CocoaHub<br>
+			Universal Links and Handoff<br>
+			Share Clips<br>
+			New Community tab with curated content from CocoaHub<br>
 			</span>
 		</p>
-		
-		<p class="pitch comming-soon">
-			<h4>Other Features</h4>
-			<span class="light subpitch">
-			Universal Links and Handoff<br>
-			Add Bookmarks to Videos<br>
-			Share Clips<br>
-		</p>
-		
+
 		<p class="pitch comming-soon">
 			System Requirements<br>
 			<span class="light">macOS 10.15 (Catalina) or later<span>
