Updated OG image and added Twitter card

--- a/index.html
+++ b/index.html
@@ -11,9 +11,13 @@
 	<link rel="stylesheet" href="css/main_v7.css">
 	
 	<meta property="og:title" content="The unofficial WWDC app for macOS">
-	<meta property="og:image" content="https://wwdc.io/images/hero_v7@2x.png">
+	<meta property="og:image" content="https://wwdc.io/images/opengraph.jpg">
 	<meta property="og:site_name" content="WWDC for macOS"/>
 	<meta property="og:description" content="Watch all WWDC videos from this year and previous years."/>
+	<meta name="twitter:title" content="WWDC for macOS" />
+	<meta name="twitter:description" content="The unofficial WWDC app for macOS. Watch all WWDC videos from this year and previous years." />
+	<meta name="twitter:card" content="summary_large_image" />
+	<meta name="twitter:image" content="https://wwdc.io/images/opengraph.jpg" />
 </head>
 <body>
 
