Fixed download link

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 			<a class="button" href="https://github.com/insidegui/WWDC" title="This is an open source project, you can find the code and contribute on GitHub">
 				Fork on GitHub
 			</a>
-			<a class="button primary-bg" href="https://cdn.wwdc.io/WWDC_latest.zip">
+			<a class="button primary-bg" href="https://f001.backblazeb2.com/file/wwdcio/WWDC_latest.zip">
 				Download
 			</a>
 		</div>
