Added MacStadium logo

--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
 
     <title>The unofficial WWDC app for macOS</title>
 
-    <link rel="stylesheet" href="css/main_v7.css">
+    <link rel="stylesheet" href="css/main_v7.css?v=2">
 
     <meta property="og:title" content="The unofficial WWDC app for macOS">
     <meta property="og:image" content="https://wwdc.io/images/opengraph.jpg">
@@ -109,7 +109,9 @@
 	</section>
 	
 	<footer>
-		<p>WWDC for macOS is a native app (Electron Free™).</p>
+		<p id="macstadium">
+			<a href="https://macstadium.com"><img src="/images/MacStadiumOSS.png" alt="Powered by MacStadium"></a>
+		</p>
 		
 		<p>
 			<small>macOS is a trademark of Apple Inc., registered in the U.S. and other countries.</small>
